...
                        Image(systemName: "chevron.left")
                            .foregroundColor(.primary.opacity(0.65))
                    }
                    LegacyTextField(
                        isFirstResponder: $viewModel.isFocusSearchText,
                        text: $viewModel.searchText,
                        placeholder: "Search…")
                    .onChange(of: viewModel.searchText) { newValue in
                        viewModel.search(newValue)
                    }
                    Button {
                        viewModel.searchText = ""
                    } label: {
...
}

struct SearchView_Previews: PreviewProvider {
    static var previews: some View {
        SearchView(
            isPresented: .constant(true),
            mapTitle: .constant("Bangkok, TH"),
            mapRegion: .constant(MKCoordinateRegion(
                center: CLLocationCoordinate2D(latitude: 13.7468665, longitude: 100.5368355),
                span: MKCoordinateSpan(latitudeDelta: 0.5, longitudeDelta: 0.5)))
        )
    }
}
...
